# zed-laravel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  GITHUB_RELEASE_CHECKLIST.md  INSTALL.md  LICENSE  PERFORMANCE.md  PROJECT_SUMMARY.md  PUBLISHING.md  README.md  URL_UPDATE_SUMMARY.md  extension.toml  extension.wasm  test-all-features.php  test-installation.php  test-laravel-helpers.php
lsp-proxy/: package.json  proxy.js
src/: lib.rs
v1/: Cargo.toml  README.md  extension.toml
v1/docs/: feature-plan.md
v1/src/: lib.rs  slash.rs
v2/: Cargo.toml  extension.toml  extension.wasm
v2/lsp-proxy/: proxy.js
v2/src/: lib.rs
