[package]
name = "zed_laravel"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
indexmap = "2.2"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
zed_extension_api = "0.7.0"
